add categories viewers logic & some fixes ;)
